--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -161,7 +161,7 @@ body{
     position: absolute;
     z-index: 1;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.9); /* */
 }
 #loader{                        /* display : none; ? */
