--- a/css/styles-desktop.css
+++ b/css/styles-desktop.css
@@ -1,301 +1,113 @@
-        /* *** feuille de styles CSS index-desktop - projet ohmyfood *** */
+        /* *** feuille de styles CSS index-desktop - projet ohmyfood - Loïc M pour OpenClassRoom *** */
     /* *** Media Querie *** */
+:root{
+    --styles_desktop_css-projet-ohmyfood-Loïc-M-pour-OpenClassRoom: #fe4164;
+}
 @media screen and (min-width: 1025px) and (max-width: 1440px){
+    /* *** Animation loader - Keyframes box *** */
+    #loader{
+        width: 350px;
+        height: 350px;
+    }
     /* *** Fonts *** */
     /* *** Fonts - Main *** */
-    .location>input,
-    .explorer-text>p{
-        font-family: texte;
-        color: var(--color-fonts-paragraph-prix);
+    .explorer-text>h1{
+        font-size: 40px;
+        font-weight: 700;
     }
-    .explorer-text>h1,
-    .explorer-link>a,
-    .notice>h2,
-    .step-content>p,
-    .restaurants-list>h2,
-    .card-restaurant-title>h3,
-    .card-restaurant-title>p{
-        font-family: texte;
-        color: var(--color-fonts-texte);
-    }
-    .explorer-link>a,
-    .card-restaurant>a,
-    .card-restaurant>a{
-        text-decoration: none;
-    }
-    .explorer-link>a{
-        color: var(--color-fonts-button);
-        font-weight: bold;
-    }
-    .explorer-text>h1,
-    .notice>h2,
-    .restaurants-list>h2{
-        font-size: 24px;
-    }
-    .explorer-text>p,
-    .card-restaurant-title>h3{
-        font-size: 18px;
-    }
-    .location>input,
-    .step-content>p{
-        font-weight: bold;
-    }
-    .step-number>p{
-        font-family: texte;
-        color: var(--color-fonts-button);    
-    }
-    .card-restaurant-title>p{
-        font-size: 17px;
-    }
-    .location>input,
-    .explorer-link>a,
-    .step-content>p{
-        font-size: 16px;
-    }
-    .step-number>p{
-        font-size: 14px;    
-    }
-    .new1>p,
-    .new2>p{
-        font-family: texte;
-        color: var(--color-fonts-new);
-        font-size: 14px;
-    }
-    /* *** Fonts - Footer *** */
-    .footer-logo>h3{
-        font-family: logo-titres;
-        font-style: italic;
-        color: var(--color-fonts-footer);
-        font-size: 18px;
-        font-weight: 400;
-    }
-    .footer-link-logo>a,
-    .footer-links>a{
-        font-family: texte;
-        text-decoration: none;
-        color: var(--color-fonts-footer);
-        font-size: 16px;
-    }
-    /* *** *** *** *** *** BOX *** *** *** *** *** */
-    /* *** Body *** */
-    html,
-    body,
-    .container{
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-    /* *** Header *** */
+        /* *** *** *** *** *** BOX *** *** *** *** *** */
+        /* *** Header *** */
     .header-logo{
-        display: flex;
-        justify-content: center;
-        height: 63px;
+        height: 96px;
     }
     .header-logo>img{
-        width: 162px;
-        margin-top: 14px;
-        margin-bottom: 5px;
+        width: 200px;
+        height: 34.2px;
+        margin-top: 30px;
+        margin-bottom: 31.8px;
     }
-    /* *** Main *** */
-    /* *** Main - Location *** */
-    .location{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-    }
-    .location>input{
-        width: 99%;
-        height: 50px;
-        background-color: var(--color-background-header);
-        background-image: url(../assets/images/icon/Pin.png);
-        background-repeat: no-repeat;
-        background-position-x: 26.67%;
-        background-position-y: center;
-        border: none;
-        text-align: center;
-    }
-    /* *** Main - Explorer *** */
-    .explorer{
-        background-color: var(--color-background-explorer);
-    }
-    .explorer-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+        /* *** Main *** */
+        /* *** Main - Explorer *** */
     .explorer-text>h1{
-        width: 73.33%; 
-        height: 68px;
-        margin-top: 40px;
-        margin-bottom: 0px;
-        text-align: center;   
+        width: auto;
+        height: 47px;
+        margin-top: 30px;
+        white-space: nowrap;
     }
     .explorer-text>p{
-        width: 84%; 
-        height: 46px;
-        margin-top: 0px;
-        margin-bottom: 27px;
-        text-align: center;   
-    }
-    .explorer-link{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        width: auto;
+        margin-top: 18px;
+        margin-bottom: 18px;
+        white-space: nowrap;
     }
     .explorer-link>a{
-        background-image: linear-gradient(to bottom right, var(--color-button-gradien), var(--color-button));
-        text-align: center;
-        cursor: pointer;
-        width: 218px;
-        border-radius: 25px;
-        padding: 13px 18.75px 13px 18.75px;
-        margin-bottom: 57px;
-        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
-        
+        margin-bottom: 30px;
     }
-    .explorer-link>a:hover{
-        opacity: 0.9;
-        box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.25);
-    }
-    /* *** Main - Notice *** */
-    .notice{
-        display: flex;
-        flex-direction: column;
-    }
+        /* *** Main - Notice *** */
     .notice>h2{
-        margin-top: 46px;
-        margin-bottom: 26px;
-        margin-left: 5.33%;
+        width: 19.1%;
+        height: 31px;
+        margin-top: 50px;
+        margin-bottom: 25px;
+        margin-left: 12.5%;
     }
     .steps{
-        display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
     }
-    .step-content{
-        display: flex;
-        align-items: center;
-        position: relative;
-        width: 86%;
-        max-width: 322.49px;
-        height: 72.38px;  
-        background-color: var(--color-background-explorer);
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);    
-        text-align: center;
-        background-repeat: no-repeat;
-        background-position-x: 36.19px;
-        background-position-y: center;  
+    .step-content:first-child>p{
+        margin-left: 20.5%;
     }
-    .step-content>p{
-        margin-left: 22.79%;  
+    .steps .step-content:first-child{
+        background-position-x: 10.48%;
+        white-space: nowrap;
     }
-    .step-content:first-child{
-        background-image: url(../assets/images/icon/mobile-screen-button.png);
+    .steps .step-content:nth-child(2){
+        background-position-x: 10.95%;
     }
-    .step-content:nth-child(2){
-        background-image: url(../assets/images/icon/list-ul.png);
+    .steps .step-content:nth-child(3){
+        background-position-x: 11.73%;
     }
-    .step-content:nth-child(3){
-        background-image: url(../assets/images/icon/store.png);
+    .steps .step-content:first-child{
+        margin-left: 13.37%;
     }
-    .step-content:first-child,
-    .step-content:nth-child(2){
-        margin-bottom: 24.92px;  
+    .steps .step-content:nth-child(2),
+    .steps .step-content:nth-child(3){
+        margin-left: 2.54%;
     }
-    .step-content:nth-child(3){
-        margin-bottom: 68px;
+    .steps .step-content:first-child,
+    .steps .step-content:nth-child(2),
+    .steps .step-content:nth-child(3){
+        margin-bottom: 50px;
     }
-    .step-number{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 24.19px;
-        left: -12px;
-        width: 24px;
-        height: 24px;
-        background-color: var(--color-button);
-        border: none;
-        border-radius: 12px;
-        text-align: center;  
+    .steps .step-content:nth-child(3){
+        margin-right: 14.38%;
     }
-    /* *** Main - Restaurants list *** */
+        /* *** Main - Restaurants list *** */
     .restaurants-list{
-        width: 100%;
-        background-color: var(--color-background-explorer);
-        padding-top: 54px;
+        padding-top: 30px;
     }
     .restaurants-list>h2{
-        margin-top: 0px;
-        margin-left: 5.33%;
+        margin-left: 12.5%;
     }
     .restaurants{
-        padding-bottom: 48px;
-        margin-left: 3.73%;
-        margin-right: 4%;
+        padding-bottom: 30px;
+        margin-left: 12.2%;
+        margin-right: 12.2%;
+    }
+    .restaurants-new,
+    .restaurants-panel{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .restaurants-new{
+        margin-bottom: 50px;
     }
     .card-restaurant{
-        position: relative;
-        background-color: var(--color-background-card);
-        width: 100%;
-        min-height: 251px;
-        margin-bottom: 18px;
-        border-radius: 15px;
-    }
-    .card-restaurant-title{
-        padding-bottom: 12px;
-    }
-    .card-restaurant-title>h3{
-        width: 50%;
-        margin-top: 16px;
-        margin-left: 3.47%;
+        width: 45.01%;
+        height: 251px;
         margin-bottom: 0;
-    }
-    .card-restaurant-title>p{
-        width: 50%;
-        margin-top: 5px;
-        margin-left: 3.47%;
-    }
-    .img-restaurant{
-        position: relative;
-    }
-    .img-restaurant>img{
-        width: 100%;
-        height: 174px;
-        object-fit: cover;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-    }
-    .new1,
-    .new2{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        background-color: var(--color-background-new);
-        width: 80px;
-        height: 29px;
-        border-radius: 2px;
-    }
-    .heart-position{
-        position: absolute;
-        right: 25px;
-        bottom: 21px;    
-    }
-    .heart{
-        background-color: var(--color-background-card);
-        background-image: url(../assets/images/icon/heart-blank.png);
-        background-repeat: no-repeat;
-        background-position-x: center;
-        background-position-y: center;
-        border: none;
-        width: 22px;
-        height: 21px;
     }
     .heart:hover{
         background-color: var(--color-background-card);
@@ -306,47 +118,33 @@
         border: none;
         width: 22px;
         height: 21px;
+        transition: all 900ms;
     }
     /* *** Footer *** */
     .footer{
-        display: flex;
-        flex-direction: column;
-        background-color: var(--color-background-footer);
-        padding-bottom: 15px;
-        padding-left: 6.67%;        
+        flex-direction: row-reverse;
+        align-items: center;
+        padding-bottom: 0;
+        padding-left: 0;
     }
     .footer-logo{
-        margin-bottom: 7px; 
+        margin: 57px 26.42px 30px 16px;
+    }
+    .footer-logo>h3{
+        margin: 0 0 0 0;
     }
     .footer-links{
-        display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        gap: 7px;
     }
     .footer-links>a{
-        margin-bottom: 7px;
+        width: 130px;
+        margin-top: 64px;
+        margin-bottom: 30px;
     }
     .footer-link-logo{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: 7px;
-    }
-    .footer-link-logo-submit{
-        width: 11px;
-        height: 13px;
-        background-image: url(../assets/images/icon/cutlery.png);
-        background-repeat: no-repeat;
-        background-position-x: center;
-        background-position-y: center;
-        margin-right: 11px;
-    }
-    .footer-link-logo-partner{
-        width: 12px;
-        height: 13px;
-        background-image: url(../assets/images/icon/partner.png);
-        background-repeat: no-repeat;
-        background-position-x: center;
-        background-position-y: center;
-        margin-right: 10.08px;
+        width: 190px;
+        margin-top: 64px;
+        margin-bottom: 30px;
     }
 }
