--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,29 @@
-        /* *** feuille de styles CSS index - projet ohmyfood *** */
+        /* *** feuille de styles CSS index - projet ohmyfood - Loïc M pour OpenClassRoom *** */
     /* *** ROOT - Variable CSS *** */
 :root{
-    --color-button: #9356DC;                    /* Violet */
-    --color-button-gradien: #FF79DA;            /* Violet clair */
-    --color-fonts-new: #008766;                 /* Vert */
-    --color-background-new: #99E2D0;            /* Vert clair */
-    --color-bleu-marine: #003A68;               /* Bleu marine */
-    --color-skyblue: #89C8FA;                   /* Bleu ciel */
-    --color-background-footer: #353535;         /* Noir */
-    --color-fonts-paragraph-prix: #353535;      /* Noir */
-    --color-fonts-footer: #FFFFFF;              /* White */
-    --color-fonts-button: #FFFFFF;              /* White */
-    --color-fonts-titre-menu: #101010;          /* Noir */
-    --color-fonts-texte: #000000;               /* Noir */
-    --color-background-header: #EAEAEA;         /* Gris */
-    --color-background-explorer: whitesmoke;    /* Gris clair */
-    --color-background-card: #FFFFFF;           /* White */
-    --color-background-menu:#F3F3F3;            /* Gris clair */
-    --color-fil-step: #F6F6F6;                  /* White */
-    --color-step-shadow:  rgba(0, 0, 0, 0.15);   /*     background: #000000; opacity: 0.1 */    
+    --styles_css-projet-ohmyfood-Loïc-M-pour-OpenClassRoom: #fe4164;
+    --color-primaire: #9356DC;
+    --color-secondaire: #FF79DA;
+    --color-tertiaire: #008766;
+    --color-fonts-button: #FFFFFF;
+    --color-fonts-footer: #FFFFFF;
+    --color-fonts-location: #353535;
+    --color-fonts-texte: #000000;
+    --color-fonts-titre-menu: #101010;
+    --color-background-card: #FFFFFF;
+    --color-background-explorer: #f5f5f5;
+    --color-background-footer: #353535;
+    --color-background-location: #EAEAEA;
+    --color-background-loader: rgba(0, 0, 0, 0.9);
+    --color-background-loader-desktop-large: #FFFFFF;
+    --color-background-loader-logo: #f5f5f5;
+    --color-background-menu:#F3F3F3;
+    --color-background-new: #99E2D0;
+    --color-background-restaurants-list: #f5f5f5;
+    --color-background-step: #f5f5f5;
+    --color-shadow-button:  rgba(0, 0, 0, 0.25);
+    --color-shadow-header:  rgba(0, 0, 0, 0.15);
+    --color-shadow-step:  rgba(0, 0, 0, 0.15);
 }
     /* *** Animation loader *** */
     /* *** Animation loader - Keyframes *** */
@@ -30,7 +35,7 @@
         transform: rotate(360deg);
     }
     100% {
-        visibility: hidden;        
+        visibility: hidden;
     }
 }
 @keyframes loader-hidden{
@@ -38,7 +43,7 @@
         transform: scale(0);
     }
 }
-    /* *** Animation loader - Keyframes *** */
+    /* *** Animation loader - Keyframes box *** */
 .loader-box{
     display: flex;
     flex-direction: column;
@@ -47,7 +52,7 @@
     z-index: 2;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: var(--color-background-loader);
     animation: loader-hidden 100ms forwards;
     animation-delay: 3s;
     transform-origin: top;
@@ -55,8 +60,8 @@
 #loader{
     margin-top: 120px;
     margin-bottom: 80px;
-    border-top: 8px solid var(--color-button-gradien);
-    border-bottom: 8px solid var(--color-button);
+    border-top: 8px solid var(--color-secondaire);
+    border-bottom: 8px solid var(--color-primaire);
     width: 200px;
     height: 200px;
     z-index: 1;
@@ -67,7 +72,7 @@
     background-position-x: center;
     background-position-y: center;
     background-size: cover;
-    background-color: var(--color-background-explorer);
+    background-color: var(--color-background-loader-logo);
 }
     /* *** Inclusion fonts *** */
 @font-face {
@@ -80,10 +85,10 @@
 }
     /* *** Fonts *** */
     /* *** Fonts - Main *** */
-.location>input,
+.location>p,
 .explorer-text>p{
     font-family: texte;
-    color: var(--color-fonts-paragraph-prix);
+    color: var(--color-fonts-location);
 }
 .explorer-text>h1,
 .explorer-link>a,
@@ -113,29 +118,28 @@
 .card-restaurant-title>h3{
     font-size: 18px;
 }
-.location>input,
+.location>p,
 .step-content>p{
     font-weight: bold;
 }
 .step-number>p{
     font-family: texte;
-    color: var(--color-fonts-button);    
+    color: var(--color-fonts-button);
 }
 .card-restaurant-title>p{
     font-size: 17px;
 }
-.location>input,
+.location>p,
 .explorer-link>a,
 .step-content>p{
     font-size: 16px;
 }
 .step-number>p{
-    font-size: 14px;    
+    font-size: 14px;
 }
-.new1>p,
-.new2>p{
+.new>p{
     font-family: texte;
-    color: var(--color-fonts-new);
+    color: var(--color-tertiaire);
     font-size: 14px;
 }
     /* *** Fonts - Footer *** */
@@ -168,11 +172,12 @@ body,
     justify-content: center;
     position: relative;
     height: 63px;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 2px 4px 0px var(--color-shadow-header);
     padding-bottom: 2px;
 }
 .header-logo>img{
     width: 162px;
+    height: 44px;
     margin-top: 14px;
     margin-bottom: 5px;
 }
@@ -180,20 +185,31 @@ body,
     /* *** Main - Location *** */
 .location{
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    justify-content: center;
     align-items: center;
+    background-color: var(--color-background-location);
     width: 100%;
+    gap: 1.18%;
 }
-.location>input{
-    width: 100%;
+.location>p{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 109px;
     height: 50px;
-    background-color: var(--color-background-header);
+    border: none;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.pin{    
     background-image: url(../assets/images/icon/pin.png);
     background-repeat: no-repeat;
-    background-position-x: 26.67%;
+    background-position-x: center;
     background-position-y: center;
-    border: none;
-    text-align: center;
+    width: 12px;
+    height: 50px;
 }
     /* *** Main - Explorer *** */
 .explorer{
@@ -206,18 +222,18 @@ body,
     align-items: center;
 }
 .explorer-text>h1{
-    width: 73.33%; 
+    width: 73.33%;
     height: 68px;
     margin-top: 40px;
     margin-bottom: 0px;
-    text-align: center;   
+    text-align: center;
 }
 .explorer-text>p{
     width: 84%; 
     height: 46px;
     margin-top: 0px;
     margin-bottom: 27px;
-    text-align: center;   
+    text-align: center;
 }
 .explorer-link{
     display: flex;
@@ -225,18 +241,19 @@ body,
     align-items: center;
 }
 .explorer-link>a{
-    background-image: linear-gradient(to bottom right, var(--color-button-gradien), var(--color-button));
+    background-image: linear-gradient(to bottom right, var(--color-secondaire), var(--color-primaire));
+    box-shadow: 0px 4px 10px 0px var(--color-shadow-button);
+    width: 218px;
+    height: 24px;
+    border-radius: 25px;
+    margin-bottom: 57px;
+    padding: 13px 18.75px 13px 18.75px;
     text-align: center;
     cursor: pointer;
-    width: 218px;
-    border-radius: 25px;
-    padding: 13px 18.75px 13px 18.75px;
-    margin-bottom: 57px;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);    
 }
 .explorer-link>a:hover{
+    box-shadow: 1px 1px 9px var(--color-shadow-button);
     opacity: 0.9;
-    box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.25);
 }
     /* *** Main - Notice *** */
 .notice{
@@ -257,34 +274,36 @@ body,
     display: flex;
     align-items: center;
     position: relative;
+    background-color: var(--color-background-step);
+    background-repeat: no-repeat;
+    background-position-y: center;
+    box-shadow: 0px 4px 15px 0px var(--color-shadow-step);
     width: 86%;
     max-width: 322.49px;
-    height: 72.38px;  
-    background-color: var(--color-background-explorer);
+    height: 72.38px;
     border-radius: 20px;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);    
     text-align: center;
-    background-repeat: no-repeat;
-    background-position-x: 36.19px;
-    background-position-y: center;  
 }
 .step-content>p{
-    margin-left: 22.79%;  
+    margin-left: 22.79%;
 }
-.step-content:first-child{
+.steps .step-content:first-child{
     background-image: url(../assets/images/icon/mobile-screen-button.png);
+    background-position-x: 10.38%;
 }
-.step-content:nth-child(2){
+.steps .step-content:nth-child(2){
     background-image: url(../assets/images/icon/list-ul.png);
+    background-position-x: 10.69%;
 }
-.step-content:nth-child(3){
+.steps .step-content:nth-child(3){
     background-image: url(../assets/images/icon/store.png);
+    background-position-x: 11%;
 }
-.step-content:first-child,
-.step-content:nth-child(2){
+.steps .step-content:first-child,
+.steps .step-content:nth-child(2){
     margin-bottom: 24.92px;  
 }
-.step-content:nth-child(3){
+.steps .step-content:nth-child(3){
     margin-bottom: 68px;
 }
 .step-number{
@@ -294,20 +313,21 @@ body,
     position: absolute;
     top: 24.19px;
     left: -12px;
+    background-color: var(--color-primaire);
     width: 24px;
     height: 24px;
-    background-color: var(--color-button);
     border: none;
     border-radius: 12px;
     text-align: center;  
 }
     /* *** Main - Restaurants list *** */
 .restaurants-list{
+    background-color: var(--color-background-restaurants-list);
     width: 100%;
-    background-color: var(--color-background-explorer);
     padding-top: 54px;
 }
 .restaurants-list>h2{
+    width: 18.66%;
     margin-top: 0px;
     margin-left: 5.33%;
 }
@@ -320,7 +340,7 @@ body,
     position: relative;
     background-color: var(--color-background-card);
     width: 100%;
-    min-height: 251px;
+    height: 251px;
     margin-bottom: 18px;
     border-radius: 15px;
 }
@@ -332,11 +352,13 @@ body,
     margin-top: 16px;
     margin-left: 3.47%;
     margin-bottom: 0;
+    white-space: nowrap;
 }
 .card-restaurant-title>p{
     width: 50%;
     margin-top: 5px;
     margin-left: 3.47%;
+    white-space: nowrap;
 }
 .img-restaurant{
     position: relative;
@@ -348,8 +370,7 @@ body,
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
-.new1,
-.new2{
+.new{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -364,7 +385,7 @@ body,
 .heart-position{
     position: absolute;
     right: 25px;
-    bottom: 21px;    
+    bottom: 21px;
 }
 .heart{
     background-color: var(--color-background-card);
@@ -385,7 +406,7 @@ body,
     border: none;
     width: 22px;
     height: 21px;
-    transition: all 750ms;
+    transition: all 900ms;
 }
     /* *** Footer *** */
 .footer{
@@ -393,7 +414,7 @@ body,
     flex-direction: column;
     background-color: var(--color-background-footer);
     padding-bottom: 15px;
-    padding-left: 6.67%;        
+    padding-left: 6.67%;
 }
 .footer-logo{
     margin-bottom: 7px; 
@@ -412,20 +433,20 @@ body,
     margin-bottom: 7px;
 }
 .footer-link-logo-submit{
-    width: 11px;
-    height: 13px;
     background-image: url(../assets/images/icon/cutlery.png);
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
+    width: 11px;
+    height: 13px;
     margin-right: 11px;
 }
 .footer-link-logo-partner{
-    width: 12px;
-    height: 13px;
     background-image: url(../assets/images/icon/partner.png);
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
+    width: 12px;
+    height: 13px;
     margin-right: 10.08px;
 }
